--- a/app/app.css
+++ b/app/app.css
@@ -1,15 +1,223 @@
 @import "tailwindcss";
 
-@theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+@font-face {
+  font-family: icons;
+  font-display: swap;
+  src: url(/icons.woff2) format("woff2");
+  font-weight: 400;
+  font-style: normal
 }
 
-html,
-body {
-  @apply bg-white dark:bg-gray-950;
+@font-face {
+  font-family: Lato;
+  font-display: swap;
+  src: url(/Lato-Bold.woff2) format("woff2");
+  font-weight: 700;
+  font-style: normal
+}
 
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
+@font-face {
+  font-family: Lato;
+  font-display: swap;
+  src: url(/Lato-Medium.woff2) format("woff2");
+  font-weight: 500;
+  font-style: normal
+}
+
+@font-face {
+  font-family: Lato;
+  font-display: swap;
+  src: url(/Lato-Regular.woff2) format("woff2");
+  font-weight: 400;
+  font-style: normal
+}
+
+:root {
+  --text-black: #0b1f33;
+  --text-red: #FF314F;
+  --black-hover: #14385c;
+  --black-active: #020508;
+  --text-gray: #66727f;
+  --blue: #1f50e8;
+  --blue-hover: #4F76ED;
+  --blue-active: #143EC2;
+  --blue-light: #4B70E1;
+  --green: #62d28f;
+  --green-hover: #88DDAA;
+  --green-active: #39C672;
+  --gray: #F0F1FB;
+  --gray-hover: #F0F1FB;
+  --gray-active: #C7CAF0;
+  --line-gray: #e1e1e1;
+  --background-light-blue: #fafcff;
+  --background-blue: #EBF3FF;
+  --background-gray: #eff5f9;
+  --white: #fff;
+  --blue-gradient: linear-gradient(180deg, #1f50e8 0%, #4f75ec 100%);
+  --blue-velevet-gradient: linear-gradient(180deg, #2b88e0 0%, #4c78dc 20%, #5f67d9 40%, #6d54d5 60%, #773dd1 80%, #7f1ccd 100%);
+  --lato-family: "Lato", sans-serif;
+  --inter-family: "Inter", sans-serif;
+  --montserrat-family: "Montserrat", sans-serif
+}
+
+body {
+  font-family: Lato;
+  font-weight: 400;
+}
+
+button,
+input,
+textarea {
+  font-family: var(--lato-family);
+  font-size: inherit;
+  line-height: inherit;
+  color: inherit;
+  background-color: transparent;
+}
+
+button,
+option,
+select {
+  cursor: pointer;
+}
+
+ul li {
+  list-style: none;
+}
+
+:active,
+:focus {
+  outline: 0
+}
+
+[class*=-container] {
+  max-width: 78.5rem;
+  margin: 0 auto;
+  padding: 0 1.25rem
+}
+
+[class*=icon_]:before {
+  font-family: icons;
+  font-style: normal;
+  font-weight: 400;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.button {
+  font-weight: 500;
+  font-size: 1rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--white);
+  padding: 14px 20px;
+  border-radius: .625rem;
+  background-color: var(--text-black);
+  transition: background-color .3s ease-in-out;
+  gap: .625rem;
+  border: 1px solid transparent;
+  flex-direction: row-reverse
+}
+
+.button:active {
+  background-color: var(--black-active)
+}
+
+.button_green {
+  background-color: var(--green)
+}
+
+.button_green:active {
+  background-color: var(--green-active)
+}
+
+.button_link {
+  color: var(--blue)
+}
+
+.button_link:active {
+  color: var(--blue-active)
+}
+
+.button_outline {
+  background-color: transparent;
+  border-color: var(--green);
+  color: var(--green)
+}
+
+.button_outline:active {
+  color: var(--green-hovere);
+  background-color: transparent;
+  border-color: var(--green-active)
+}
+
+.button_gray {
+  background-color: var(--gray)
+}
+
+.button_gray:active {
+  background-color: var(--gray-active)
+}
+
+.button_inactive {
+  background-color: var(--line-gray);
+  pointer-events: none;
+  border-color: var(--line-gray)
+}
+
+.button--fw {
+  width: 100%
+}
+
+.link-action {
+  color: var(--blue);
+  transition: color .3s ease-in-out
+}
+
+.link-action:active {
+  color: var(--blue-active)
+}
+
+.link-action:hover {
+  color: var(--blue-hover)
+}
+
+@media (any-hover:hover) {
+  .button:hover {
+    background-color: var(--black-hover)
+  }
+
+  .button_green:hover {
+    background-color: var(--green-hover)
+  }
+
+  .button_link:hover {
+    color: var(--blue-hover)
+  }
+
+  .button_outline:hover {
+    color: var(--green-hover);
+    background-color: transparent;
+    border-color: var(--green-hover)
+  }
+
+  .button_gray:hover {
+    background-color: var(--gray-hover)
+  }
+
+  .menu__link:hover {
+    color: var(--blue-hover)
+  }
+
+  .link-action:hover {
+    color: var(--blue-hover)
+  }
+
+  .search-btn:hover {
+    color: var(--blue-hover)
   }
 }
