--- a/app/app.css
+++ b/app/app.css
@@ -60,9 +60,17 @@
   --montserrat-family: "Montserrat", sans-serif
 }
 
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
 body {
+  line-height: 1.2;
   font-family: Lato;
   font-weight: 400;
+  font-size: 1rem;
 }
 
 button,
@@ -85,6 +93,12 @@ ul li {
   list-style: none;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 :active,
 :focus {
   outline: 0
@@ -105,6 +119,20 @@ ul li {
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+[class*=-ibg] {
+  position: relative;
+}
+
+[class*=-ibg] img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .button {
@@ -186,6 +214,27 @@ ul li {
   color: var(--blue-hover)
 }
 
+.title {
+  line-height: 1.1;
+  font-weight: 700;
+}
+
+.title_h2 {
+  line-height: 1.2;
+}
+
+.title_h5 {
+  font-size: 1rem;
+}
+
+.text_descr {
+  font-weight: 700;
+}
+
+.text {
+  line-height: 1.2;
+}
+
 @media (any-hover:hover) {
   .button:hover {
     background-color: var(--black-hover)
@@ -219,5 +268,119 @@ ul li {
 
   .search-btn:hover {
     color: var(--blue-hover)
+  }
+}
+
+@media (max-width:29.99875em) {
+  .text_descr {
+    font-weight: 500
+  }
+}
+
+@media (max-width:20em) {
+  .title_h1 {
+    font-size: 2.375rem
+  }
+
+  .title_h2 {
+    font-size: 1.625rem
+  }
+
+  .title_h3 {
+    font-size: 1.1875rem
+  }
+
+  .title_h4 {
+    font-size: 1.125rem
+  }
+
+  .text_descr {
+    font-size: 1.0625rem
+  }
+}
+
+@media (min-width:20em) and (max-width:78.5em) {
+  @supports (font-size:clamp(2.375rem, 2.1185897436rem + 1.2820512821vw, 3.125rem)) {
+    .title_h1 {
+      font-size: clamp(2.375rem, 2.1185897436rem + 1.2820512821vw, 3.125rem)
+    }
+  }
+
+  @supports not (font-size:clamp(2.375rem, 2.1185897436rem + 1.2820512821vw, 3.125rem)) {
+    .title_h1 {
+      font-size: calc(2.375rem + .75 * (100vw - 20rem)/ 58.5)
+    }
+  }
+
+  @supports (font-size:clamp(1.625rem, 1.4967948718rem + 0.641025641vw, 2rem)) {
+    .title_h2 {
+      font-size: clamp(1.625rem, 1.4967948718rem + .641025641vw, 2rem)
+    }
+  }
+
+  @supports not (font-size:clamp(1.625rem, 1.4967948718rem + 0.641025641vw, 2rem)) {
+    .title_h2 {
+      font-size: calc(1.625rem + .375 * (100vw - 20rem)/ 58.5)
+    }
+  }
+
+  @supports (font-size:clamp(1.1875rem, 1.0806623932rem + 0.5341880342vw, 1.5rem)) {
+    .title_h3 {
+      font-size: clamp(1.1875rem, 1.0806623932rem + .5341880342vw, 1.5rem)
+    }
+  }
+
+  @supports not (font-size:clamp(1.1875rem, 1.0806623932rem + 0.5341880342vw, 1.5rem)) {
+    .title_h3 {
+      font-size: calc(1.1875rem + .3125 * (100vw - 20rem)/ 58.5)
+    }
+  }
+
+  @supports (font-size:clamp(1.125rem, 1.0822649573rem + 0.2136752137vw, 1.25rem)) {
+    .title_h4 {
+      font-size: clamp(1.125rem, 1.0822649573rem + .2136752137vw, 1.25rem)
+    }
+  }
+
+  @supports not (font-size:clamp(1.125rem, 1.0822649573rem + 0.2136752137vw, 1.25rem)) {
+    .title_h4 {
+      font-size: calc(1.125rem + .125 * (100vw - 20rem)/ 58.5)
+    }
+  }
+
+  @supports (font-size:clamp(1.0625rem, 1.0197649573rem + 0.2136752137vw, 1.1875rem)) {
+    .text_descr {
+      font-size: clamp(1.0625rem, 1.0197649573rem + .2136752137vw, 1.1875rem)
+    }
+  }
+
+  @supports not (font-size:clamp(1.0625rem, 1.0197649573rem + 0.2136752137vw, 1.1875rem)) {
+    .text_descr {
+      font-size: calc(1.0625rem + .125 * (100vw - 20rem)/ 58.5)
+    }
+  }
+
+  @supports (padding-top:clamp(3.75rem, 2.8952991453rem + 4.2735042735vw, 6.25rem)) {
+    .section-padding {
+      padding-top: clamp(3.75rem, 2.8952991453rem + 4.2735042735vw, 6.25rem)
+    }
+  }
+
+  @supports not (padding-top:clamp(3.75rem, 2.8952991453rem + 4.2735042735vw, 6.25rem)) {
+    .section-padding {
+      padding-top: calc(3.75rem + 2.5 * (100vw - 20rem)/ 58.5)
+    }
+  }
+
+  @supports (padding-bottom:clamp(3.75rem, 2.8952991453rem + 4.2735042735vw, 6.25rem)) {
+    .section-padding {
+      padding-bottom: clamp(3.75rem, 2.8952991453rem + 4.2735042735vw, 6.25rem)
+    }
+  }
+
+  @supports not (padding-bottom:clamp(3.75rem, 2.8952991453rem + 4.2735042735vw, 6.25rem)) {
+    .section-padding {
+      padding-bottom: calc(3.75rem + 2.5 * (100vw - 20rem)/ 58.5)
+    }
   }
 }
