--- a/app/app.css
+++ b/app/app.css
@@ -280,6 +280,10 @@ img {
     font-size: 2rem;
   }
 
+  .title_h4 {
+    font-size: 1.25rem;
+  }
+
   .section-padding {
     padding-top: 6.25rem;
     padding-bottom: 6.25rem;
