--- a/app/Components/Input/Input.module.css
+++ b/app/Components/Input/Input.module.css
@@ -30,6 +30,11 @@
     height: 2.1875rem;
 }
 
+.readOnly {
+    background-color: var(--background-gray);
+    color: var(--text-gray);
+}
+
 .form-row {}
 
 .input-button {
