--- a/app/Widgets/PersonalDataForm/PersonalDataForm.module.css
+++ b/app/Widgets/PersonalDataForm/PersonalDataForm.module.css
@@ -6,6 +6,16 @@
     display: grid;
 }
 
+@media (min-width: 78.5em) {
+    .form {
+        gap: 2rem;
+    }
+
+    .personal-text {
+        margin-bottom: 2rem;
+    }
+}
+
 @media (min-width: 47.9988em) {
     .form {
         grid-template-columns: repeat(2, 1fr);
