--- a/app/app.css
+++ b/app/app.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "./schedule.css";
 
 @font-face {
   font-family: icons;
@@ -104,7 +105,7 @@ img {
   outline: 0
 }
 
-[class*=-container] {
+[class*=-container]:not(.react-datepicker__month-container) {
   max-width: 78.5rem;
   margin: 0 auto;
   padding: 0 1.25rem
@@ -410,4 +411,15 @@ img {
       padding-bottom: calc(3.75rem + 2.5 * (100vw - 20rem)/ 58.5)
     }
   }
+}
+
+
+.test1 {
+  background-color: red;
+  width: 250px;
+  height: 250px;
+}
+
+.test2 {
+  color: blue;
 }
