--- a/app/Components/Input/Input.module.css
+++ b/app/Components/Input/Input.module.css
@@ -49,6 +49,9 @@
     justify-content: center;
     flex: 0 0 2.5rem;
     height: 2.25rem;
+    position: absolute;
+    right: 1rem;
+    cursor: pointer;
 }
 
 .light-icon-button {
