добавил новые стили в лендинг

--- a/app/landing.css
+++ b/app/landing.css
@@ -1,3 +1,9 @@
+.allowance,
+.main-benefits {
+    content-visibility: auto;
+    contain-intrinsic-size: 0 500px;
+}
+
 .hero {
     color: var(--white);
     background: var(--blue-gradient)
